feat: realizando testes de todo codigo e validando cpf/cnpj
