# storage/api-docs/api-docs.json
@@ -150,7 +150,7 @@
                         "description": "No Content"
                     },
                     "404": {
-                        "description": "Cliente não encontrado"
+                        "description": "Payment not found with the specified id"
                     }
                 },
                 "security": [
@@ -192,7 +192,7 @@
                         "description": "No Content"
                     },
                     "404": {
-                        "description": "Pagamento não encontrado"
+                        "description": "Bankslip not found with the specified id"
                     }
                 },
                 "security": [
@@ -332,7 +332,7 @@
                         "title": "number",
                         "description": "number",
                         "type": "string",
-                        "example": "9999999999"
+                        "example": "06406635086"
                     }
                 },
                 "type": "object"
@@ -389,12 +389,6 @@
                         "description": "Metodo de pagamento",
                         "type": "string",
                         "example": "42"
-                    },
-                    "notification_url": {
-                        "title": "notification_url",
-                        "description": "URL de notificação do webhook",
-                        "type": "string",
-                        "example": "http://localhost/rest/webhook/payment"
                     },
                     "status": {
                         "title": "status",
